--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -240,6 +240,7 @@ jobs:
         - "-c"
         - |
           cp cf-deployment/operations/gcp.yml ops-files/
+          cp cf-deployment/operations/windows-cell.yml ops-files/
           cp cf-deployment/operations/workarounds/use-4-azs-for-router.yml ops-files/
           cp bbl-state/gcp/bbl/ops-files/*.yml ops-files/
 
@@ -249,7 +250,7 @@ jobs:
       BBL_STATE_DIR: gcp/bbl
       SYSTEM_DOMAIN: coconut.cf-app.com
       VARS_STORE_FILE: gcp/bbl/deployment-vars.yml
-      OPS_FILES: "gcp.yml clients.yml use-4-azs-for-router.yml rlp.yml"
+      OPS_FILES: "gcp.yml windows-cell.yml clients.yml use-4-azs-for-router.yml rlp.yml"
   - put: deployments-loggregator-with-changes
     params:
       repository: updated-vars-store
