--- a/pipelines/bosh-hm-forwarder.yml
+++ b/pipelines/bosh-hm-forwarder.yml
@@ -151,3 +151,5 @@ jobs:
     params:
       repository: final-bosh-hm-forwarder-release
       rebase: false
+      tag: version/version
+      tag_prefix: v
