--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -386,17 +386,13 @@ jobs:
       image_resource:
         type: docker-image
         source:
-        - repository: loggregator/bosh20
+          repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
       platform: linux
       inputs:
         - name: deployments-loggregator
         - name: consul-release
         - name: etcd-release
         - name: loggregator
-      params:
-        BOSH_ENV: 10.0.0.6
-        BOSH_USERNAME: {{bosh-username}}
-        BOSH_PASSWORD: {{bosh-password}}
       run:
         path: bash
         args:
@@ -405,41 +401,41 @@ jobs:
             #!/bin/bash
             set -eux
             loggregator_dir="$PWD/loggregator"
-            bosh -n alias-env coconut -e "$BOSH_ENV" --ca-cert "$PWD/deployments-loggregator/gcp/certs/bosh/ca.pem"
-            bosh -e coconut -n log-in --client="$BOSH_USERNAME" --client-secret="$BOSH_PASSWORD"
+
+            pushd deployments-loggregator/gcp/bbl
+              export BOSH_CLIENT=`bbl director-username`
+              export BOSH_CLIENT_SECRET=`bbl director-password`
+              export BOSH_CA_CERT=`bbl director-ca-cert`
+              export BOSH_ENVIRONMENT=`bbl director-address`
+            popd
 
             for release in $(find consul-release -name '*.tgz')
             do
-              bosh -e coconut upload-release $release
+              bosh upload-release $release
             done
 
             for release in $(find etcd-release -name '*.tgz')
             do
-              bosh -e coconut upload-release $release
+              bosh upload-release $release
             done
 
 
             pushd $loggregator_dir
                 bosh create-release --name=loggregator --force
-                bosh -e coconut upload-release --rebase
+                bosh upload-release --rebase
             popd
   - task: deploy-loggregator
     config:
       image_resource:
         type: docker-image
         source:
-        - repository: loggregator/bosh20
+          repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
       platform: linux
       inputs:
       - name: deployments-loggregator
       - name: loggregator
       outputs:
       - name: updated-deployments-loggregator
-      params:
-        DEPLOYMENT_NAME: gcp/coconut
-        BOSH_ENV: 10.0.0.6
-        BOSH_USERNAME: {{bosh-username}}
-        BOSH_PASSWORD: {{bosh-password}}
       run:
         path: bash
         args:
@@ -449,11 +445,16 @@ jobs:
             set -eux
 
             loggregator_dir="$PWD/loggregator"
-            deployment_dir="$PWD/deployments-loggregator/$DEPLOYMENT_NAME"
+            deployment_dir="$PWD/deployments-loggregator/gcp/coconut"
 
-            bosh -n alias-env coconut -e "$BOSH_ENV" --ca-cert "$PWD/deployments-loggregator/gcp/certs/bosh/ca.pem"
-            bosh -e coconut -n log-in --client="$BOSH_USERNAME" --client-secret="$BOSH_PASSWORD"
-            bosh -n -e coconut -d loggregator deploy \
+            pushd deployments-loggregator/gcp/bbl
+              export BOSH_CLIENT=`bbl director-username`
+              export BOSH_CLIENT_SECRET=`bbl director-password`
+              export BOSH_CA_CERT=`bbl director-ca-cert`
+              export BOSH_ENVIRONMENT=`bbl director-address`
+            popd
+
+            bosh -n -d loggregator deploy \
               --vars-store "$deployment_dir/loggregator-vars.yml" \
               "$loggregator_dir/templates/loggregator.yml"
 
@@ -588,14 +589,10 @@ jobs:
       image_resource:
         type: docker-image
         source:
-        - repository: loggregator/bosh20
+          repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
       platform: linux
       inputs:
         - name: deployments-loggregator
-      params:
-        BOSH_ENV: 10.0.0.6
-        BOSH_USERNAME: {{bosh-username}}
-        BOSH_PASSWORD: {{bosh-password}}
       run:
         path: bash
         args:
@@ -603,9 +600,15 @@ jobs:
           - |
             #!/bin/bash
             set -eux
-            bosh -n alias-env coconut -e "$BOSH_ENV" --ca-cert "$PWD/deployments-loggregator/gcp/certs/bosh/ca.pem"
-            bosh -e coconut -n log-in --client="$BOSH_USERNAME" --client-secret="$BOSH_PASSWORD"
-            bosh -e coconut -d loggregator run-errand loggregator-acceptance-tests --keep-alive
+
+            pushd deployments-loggregator/gcp/bbl
+              export BOSH_CLIENT=`bbl director-username`
+              export BOSH_CLIENT_SECRET=`bbl director-password`
+              export BOSH_CA_CERT=`bbl director-ca-cert`
+              export BOSH_ENVIRONMENT=`bbl director-address`
+            popd
+
+            bosh -d loggregator run-errand loggregator-acceptance-tests --keep-alive
 
 
 - name: promotion
