Add logging to smoke tests
[#142318931]

Signed-off-by: Andrew Poydence <apoydence@pivotal.io>

--- a/tasks/smoke-test.yml
+++ b/tasks/smoke-test.yml
@@ -21,9 +21,11 @@ run:
 
     # cf logs to a file
     rm -f output.txt
+    echo "Collecting logs for $APP_NAME"
     cf logs mylogspinner > output.txt 2>&1 &
     sleep 30 #wait 30 seconds for socket connection
 
+    echo "Triggering $APP_NAME"
     # curl my logspinner
     curl "$APP_NAME.cfapps.io?cycles=$CYCLES&delay=$DELAY$DELAY_UNIT&text=$MESSAGE"
 
