--- a/tasks/smoke-test.yml
+++ b/tasks/smoke-test.yml
@@ -42,7 +42,7 @@ run:
               \"points\":[[${currenttime}, ${msg_count}]],
               \"type\":\"gauge\",
               \"host\":\"${cf_api}\",
-              \"tags\":[\"${NAME}\"]}
+              \"tags\":[\"${APP_NAME}\"]}
             ]
         }" \
     'https://app.datadoghq.com/api/v1/series?api_key='$DATADOG_API_KEY
@@ -53,7 +53,7 @@ run:
               \"points\":[[${currenttime}, $DELAY]],
               \"type\":\"gauge\",
               \"host\":\"${cf_api}\",
-              \"tags\":[\"${NAME}\"]}
+              \"tags\":[\"${APP_NAME}\"]}
             ]
         }" \
     'https://app.datadoghq.com/api/v1/series?api_key='$DATADOG_API_KEY
@@ -64,7 +64,7 @@ run:
               \"points\":[[${currenttime}, ${CYCLES}]],
               \"type\":\"gauge\",
               \"host\":\"${cf_api}\",
-              \"tags\":[\"${NAME}\"]}
+              \"tags\":[\"${APP_NAME}\"]}
             ]
         }" \
     'https://app.datadoghq.com/api/v1/series?api_key='$DATADOG_API_KEY
