--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -314,6 +314,7 @@ jobs:
 
           pushd diego-release
             ./scripts/generate-bosh-lite-manifests
+            sed -i -e 's/use_v2_api: true/use_v2_api: false/g' bosh-lite/deployments/diego.yml
             bosh -n deployment bosh-lite/deployments/diego.yml
             bosh -n deploy
           popd
