--- a/pipelines/loggregator-lite.yml
+++ b/pipelines/loggregator-lite.yml
@@ -42,7 +42,7 @@ jobs:
     config:
     file: loggregator-ci/tasks/create-bosh-lite.yml
     params:
-      deploy_dir: deployments-loggregator/gcp/lite
+      deploy_dir: deployments-loggregator/gcp/loggregator-lite
       subnet_prefix: 10.100.0
       subnetwork: bosh-lite
   - task: commit
@@ -58,7 +58,7 @@ jobs:
       - name: committed-deployments-loggregator
       params:
         SOURCE: updated-deployments-loggregator
-        PATHS: gcp/lite
+        PATHS: gcp/loggregator-lite
         COMMIT_MESSAGE: "Create bosh-lite GCP director"
         OUTPUT: committed-deployments-loggregator
       run:
@@ -82,7 +82,7 @@ jobs:
   - task: delete-bosh-lite
     file: loggregator-ci/tasks/destroy-bosh-lite.yml
     params:
-      deploy_dir: deployments-loggregator/gcp/lite
+      deploy_dir: deployments-loggregator/gcp/loggregator-lite
       subnet_prefix: 10.100.0
       subnetwork: bosh-lite
   - task: commit
@@ -98,7 +98,7 @@ jobs:
       - name: committed-deployments-loggregator
       params:
         SOURCE: updated-deployments-loggregator
-        PATHS: gcp/lite
+        PATHS: gcp/loggregator-lite
         COMMIT_MESSAGE: "Delete bosh-lite GCP director"
         OUTPUT: committed-deployments-loggregator
       run:
