--- a/pipelines/smoke-tests.yml
+++ b/pipelines/smoke-tests.yml
@@ -62,67 +62,23 @@ jobs:
   - get: loggregator
   - get: 1h
     trigger: true
-  - task: v1-drain
-    config:
-      platform: linux
-      image_resource:
-        type: docker-image
-        source:
-        - repository: loggregator/bosh20
-      inputs:
-      - name: loggregator
-      params:
-        CF_SYSTEM_DOMAIN: coconut.cf-app.com
-        CF_USERNAME: {{coconut-username}}
-        CF_PASSWORD: {{coconut-password}}
-        CF_SPACE: space
-        CF_ORG: org
-        CYCLES: 10000
-        DELAY_US: 100
-        DATADOG_API_KEY: {{datadog-dev-api-key}}
-        DRAIN_VERSION: 1.0
-        NUM_APPS: 1
-      run:
-        path: bash
-        args:
-        - -c
-        - |
-          #!/bin/bash
-
-          set -e
-
-          cd loggregator/src/tools/smokes
-
-          ./push.sh && ./hammer.sh && ./report.sh && ./teardown.sh
-  - task: v2-drain
-    config:
-      platform: linux
-      image_resource:
-        type: docker-image
-        source:
-        - repository: loggregator/bosh20
-      inputs:
-      - name: loggregator
-      params:
-        CF_SYSTEM_DOMAIN: coconut.cf-app.com
-        CF_USERNAME: {{coconut-username}}
-        CF_PASSWORD: {{coconut-password}}
-        CF_SPACE: space
-        CF_ORG: org
-        CYCLES: 10000
-        DELAY_US: 100
-        DATADOG_API_KEY: {{datadog-dev-api-key}}
-        DRAIN_VERSION: 2.0
-        NUM_APPS: 1
-      run:
-        path: bash
-        args:
-        - -c
-        - |
-          #!/bin/bash
-
-          set -e
-
-          cd loggregator/src/tools/smokes
-
-          ./push.sh && ./hammer.sh && ./report.sh && ./teardown.sh
+  - task: run-smoke-tests
+    file: loggregator-ci/tasks/scalable-syslog-smoke-test.yml
+    params:
+      CF_SYSTEM_DOMAIN: coconut.cf-app.com
+      CF_USERNAME: {{coconut-username}}
+      CF_PASSWORD: {{coconut-password}}
+      CF_SPACE: space
+      CF_ORG: org
+      DATADOG_API_KEY: {{datadog-dev-api-key}}
+      DRAIN_VERSION: 1.0
+  - task: run-smoke-tests
+    file: loggregator-ci/tasks/scalable-syslog-smoke-test.yml
+    params:
+      CF_SYSTEM_DOMAIN: coconut.cf-app.com
+      CF_USERNAME: {{coconut-username}}
+      CF_PASSWORD: {{coconut-password}}
+      CF_SPACE: space
+      CF_ORG: org
+      DATADOG_API_KEY: {{datadog-dev-api-key}}
+      DRAIN_VERSION: 2.0
