Add loggregator to scalable syslog smokes input

--- a/tasks/scalable-syslog-smoke-test.yml
+++ b/tasks/scalable-syslog-smoke-test.yml
@@ -3,6 +3,8 @@ image_resource:
   type: docker-image
   source:
   - repository: loggregator/bosh20
+inputs:
+- name: loggregator
 params:
   CF_SYSTEM_DOMAIN:
   CF_USERNAME:
