--- a/pipelines/smoke-tests.yml
+++ b/pipelines/smoke-tests.yml
@@ -62,7 +62,7 @@ jobs:
   - get: loggregator
   - get: 1h
     trigger: true
-  - task: run-smoke-tests
+  - task: v1-drain-smoke-tests
     file: loggregator-ci/tasks/scalable-syslog-smoke-test.yml
     params:
       CF_SYSTEM_DOMAIN: coconut.cf-app.com
@@ -72,7 +72,7 @@ jobs:
       CF_ORG: org
       DATADOG_API_KEY: {{datadog-dev-api-key}}
       DRAIN_VERSION: 1.0
-  - task: run-smoke-tests
+  - task: v2-drain-smoke-tests
     file: loggregator-ci/tasks/scalable-syslog-smoke-test.yml
     params:
       CF_SYSTEM_DOMAIN: coconut.cf-app.com
