--- a/pipelines/smoke-tests.yml
+++ b/pipelines/smoke-tests.yml
@@ -54,6 +54,35 @@ jobs:
       PASSWORD: {{pws-password}}
       DATADOG_API_KEY: {{datadog-prod-api-key}}
 
+- name: pws-scalable-syslog-https-drain-smoke-test
+  public: false
+  serial: true
+  plan:
+  - get: loggregator-ci
+  - get: loggregator
+  - get: 1h
+    trigger: true
+  - task: v1-drain-smoke-tests
+    file: loggregator-ci/tasks/scalable-syslog-smoke-test.yml
+    params:
+      CF_SYSTEM_DOMAIN: run.pivotal.io
+      CF_USERNAME: {{pws-username}}
+      CF_PASSWORD: {{pws-password}}
+      CF_SPACE: development
+      CF_ORG: cf-lamb
+      DATADOG_API_KEY: {{datadog-prod-api-key}}
+      DRAIN_VERSION: "1.0"
+  - task: v2-drain-smoke-tests
+    file: loggregator-ci/tasks/scalable-syslog-smoke-test.yml
+    params:
+      CF_SYSTEM_DOMAIN: run.pivotal.io
+      CF_USERNAME: {{pws-username}}
+      CF_PASSWORD: {{pws-password}}
+      CF_SPACE: development
+      CF_ORG: cf-lamb
+      DATADOG_API_KEY: {{datadog-prod-api-key}}
+      DRAIN_VERSION: "2.0"
+
 - name: coconut-scalable-syslog-https-drain-smoke-test
   public: false
   serial: true
@@ -71,7 +100,7 @@ jobs:
       CF_SPACE: space
       CF_ORG: org
       DATADOG_API_KEY: {{datadog-dev-api-key}}
-      DRAIN_VERSION: 1.0
+      DRAIN_VERSION: "1.0"
   - task: v2-drain-smoke-tests
     file: loggregator-ci/tasks/scalable-syslog-smoke-test.yml
     params:
@@ -81,4 +110,4 @@ jobs:
       CF_SPACE: space
       CF_ORG: org
       DATADOG_API_KEY: {{datadog-dev-api-key}}
-      DRAIN_VERSION: 2.0
+      DRAIN_VERSION: "2.0"
