--- a/pipelines/smoke-tests.yml
+++ b/pipelines/smoke-tests.yml
@@ -34,6 +34,25 @@ jobs:
       USERNAME: {{pws-username}}
       PASSWORD: {{pws-password}}
       DATADOG_API_KEY: {{datadog-prod-api-key}}
+- name: trkr-cf-logs-floodspinner-smoke-test
+  public: false
+  serial: true
+  plan:
+  - get: loggregator-ci
+  - get: 15m
+    trigger: true
+  - task: run-smoke-tests
+    file: loggregator-ci/tasks/trkr-cf-logs-smoke-test.yml
+    params:
+      CYCLES: 10000
+      DELAY: "2"
+      DELAY_UNIT: "us"
+      MESSAGE: "FIFTEEN-MINUTE"
+      APP_NAME: "trkr-floodspinner"
+      WAIT: 300
+      USERNAME: {{trkr-username}}
+      PASSWORD: {{trkr-password}}
+      DATADOG_API_KEY: {{datadog-prod-api-key}}
 - name: pws-cf-logs-dripspinner-smoke-test
   public: false
   serial: true
@@ -53,6 +72,25 @@ jobs:
       USERNAME: {{pws-username}}
       PASSWORD: {{pws-password}}
       DATADOG_API_KEY: {{datadog-prod-api-key}}
+- name: trkr-cf-logs-dripspinner-smoke-test
+  public: false
+  serial: true
+  plan:
+  - get: loggregator-ci
+  - get: 1h
+    trigger: true
+  - task: run-smoke-tests
+    file: loggregator-ci/tasks/trkr-cf-logs-smoke-test.yml
+    params:
+      CYCLES: 1000
+      DELAY: "500"
+      DELAY_UNIT: "ms"
+      MESSAGE: "HOURLY"
+      APP_NAME: "trkr-dripspinner"
+      WAIT: 600
+      USERNAME: {{trkr-username}}
+      PASSWORD: {{trkr-password}}
+      DATADOG_API_KEY: {{datadog-prod-api-key}}
 
 - name: coconut-scalable-syslog-https-drain-smoke-test
   public: false
@@ -71,7 +109,7 @@ jobs:
       CF_SPACE: space
       CF_ORG: org
       DATADOG_API_KEY: {{datadog-dev-api-key}}
-      DRAIN_VERSION: 1.0
+      DRAIN_VERSION: "1.0"
   - task: v2-drain-smoke-tests
     file: loggregator-ci/tasks/scalable-syslog-smoke-test.yml
     params:
@@ -81,4 +119,4 @@ jobs:
       CF_SPACE: space
       CF_ORG: org
       DATADOG_API_KEY: {{datadog-dev-api-key}}
-      DRAIN_VERSION: 2.0
+      DRAIN_VERSION: "2.0"
