Skip ssl validation in cf logs smokes
Signed-off-by: Eno Compton <ecompton@pivotal.io>

--- a/tasks/cf-logs-smoke-test.yml
+++ b/tasks/cf-logs-smoke-test.yml
@@ -17,7 +17,7 @@ run:
         -u $USERNAME \
         -p $PASSWORD \
         -s development \
-        -o cf-lamb
+        -o cf-lamb --skip-ssl-validation
 
     # cf logs to a file
     rm -f output.txt
