--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -241,7 +241,7 @@ jobs:
       repository: updated-vars-store
       rebase: true
 
-- name: cf-deploy-for-smokes
+- name: loggregator-tip-deploy
   serial: true
   plan:
   - aggregate:
